--- a/molecula-shared/molecula-shared.csproj
+++ b/molecula-shared/molecula-shared.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="106.13.0" />
-    <PackageReference Include="StereoKit" Version="0.3.*" />
+    <PackageReference Include="StereoKit" Version="0.3.5-preview.1" />
   </ItemGroup>
 
 </Project>
