--- a/molecula-standalone/molecula-standalone.csproj
+++ b/molecula-standalone/molecula-standalone.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StereoKit" Version="0.3.*" />
+    <PackageReference Include="StereoKit" Version="0.3.5-preview.1" />
   </ItemGroup>
 
   <ItemGroup>
