--- a/Platforms/StereoKit_Android/Molecula_Android.csproj
+++ b/Platforms/StereoKit_Android/Molecula_Android.csproj
@@ -11,7 +11,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Molecula_Android</RootNamespace>
-    <AssemblyName>Molecula_Android</AssemblyName>
+    <AssemblyName>Molecula</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
