--- a/Platforms/StereoKit_DotNet/Molecula_DotNet.csproj
+++ b/Platforms/StereoKit_DotNet/Molecula_DotNet.csproj
@@ -9,7 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="RestSharp" Version="106.13.0" />
-		<PackageReference Include="StereoKit" Version="0.3.5-preview.2" />
+		<PackageReference Include="StereoKit" Version="0.3.6" />
 	</ItemGroup>
 
 	<ItemGroup>
