--- a/Platforms/StereoKit_Android/Molecula_Android.csproj
+++ b/Platforms/StereoKit_Android/Molecula_Android.csproj
@@ -122,7 +122,7 @@
       <Version>106.13.0</Version>
     </PackageReference>
     <PackageReference Include="StereoKit">
-      <Version>0.3.5-preview.2</Version>
+      <Version>0.3.6</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="28.0.0.3" />
