--- a/Platforms/StereoKit_UWP/Molecula_UWP.csproj
+++ b/Platforms/StereoKit_UWP/Molecula_UWP.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>Molecula</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.18362.0</TargetPlatformVersion>
+    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.19041.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>16</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -25,7 +25,7 @@
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
-    <AppxBundle>Auto</AppxBundle>
+    <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>arm64</AppxBundlePlatforms>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
     <GenerateTemporaryStoreCertificate>True</GenerateTemporaryStoreCertificate>
@@ -148,7 +148,7 @@
     <PackageReference Include="RestSharp">
       <Version>106.13.0</Version>
     </PackageReference>
-    <PackageReference Include="StereoKit" Version="0.3.5-preview.2" />
+    <PackageReference Include="StereoKit" Version="0.3.6" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Molecula.csproj">
