upgrade to new template and new stereokit version

--- a/Molecula.csproj
+++ b/Molecula.csproj
@@ -1,59 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Molecula-shared</AssemblyName>
+		<TargetFramework>net7.0</TargetFramework>
+		<OutputType>Exe</OutputType>
+
+		<ApplicationIcon>Platforms\Net\App.ico</ApplicationIcon>
   </PropertyGroup>
 
-  <!-- Hide platform project folders from the solution explorer -->
-  <ItemGroup>
-    <Compile Remove="molecula-quest\**" />
-    <Compile Remove="molecula-shared\**" />
-    <Compile Remove="molecula-standalone\**" />
-    <Compile Remove="molecula-uwp\**" />
-    <Compile Remove="Platforms\**" />
-    <EmbeddedResource Remove="molecula-quest\**" />
-    <EmbeddedResource Remove="molecula-shared\**" />
-    <EmbeddedResource Remove="molecula-standalone\**" />
-    <EmbeddedResource Remove="molecula-uwp\**" />
-    <EmbeddedResource Remove="Platforms\**" />
-    <None Remove="molecula-quest\**" />
-    <None Remove="molecula-shared\**" />
-    <None Remove="molecula-standalone\**" />
-    <None Remove="molecula-uwp\**" />
-    <None Remove="Platforms\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="Assets\Roboto-Regular.ttf" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Assets\Roboto-Regular.ttf" />
-  </ItemGroup>
+	<ItemGroup>
+		<!--Don't compile Android code in this project, but do show it in the
+		    explorer window.-->
+		<Compile Remove="**\*.Android.cs" />
+		<Compile Remove="Platforms\Android\**" />
+		<None Include="**\*.Android.cs" />
+		<None Include="Platforms\Android\**" />
 
-  <ItemGroup>
-    <SKShader Include="Assets\floor.hlsl" />
-  </ItemGroup>
+		<Compile Remove="Projects\**" />
+		<Compile Remove="Platforms\StereoKit_UWP\**" />
+		<EmbeddedResource Remove="Projects\**" />
+		<None Remove="Projects\**" />
+	</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.13.0" />
-    <PackageReference Include="StereoKit" Version="0.3.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="molecula-shared\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="molecula-quest\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="molecula-standalone\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="molecula-uwp\**" />
+    <PackageReference Include="StereoKit" Version="0.3.8" />
   </ItemGroup>
 
 </Project>
