--- a/Platforms/StereoKit_UWP/Molecula_UWP.csproj
+++ b/Platforms/StereoKit_UWP/Molecula_UWP.csproj
@@ -83,6 +83,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
+    <Compile Include="..\..\StereoApp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -148,13 +149,7 @@
     <PackageReference Include="RestSharp">
       <Version>106.13.0</Version>
     </PackageReference>
-    <PackageReference Include="StereoKit" Version="0.3.6" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Molecula.csproj">
-      <Project>{9a9b3dd2-9925-4e07-9857-513501540739}</Project>
-      <Name>Molecula</Name>
-    </ProjectReference>
+    <PackageReference Include="StereoKit" Version="0.3.8" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Atom.glb" />
