upgrading uwp nuget package

--- a/Platforms/StereoKit_UWP/Molecula_UWP.csproj
+++ b/Platforms/StereoKit_UWP/Molecula_UWP.csproj
@@ -82,7 +82,9 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="..\..\Program.cs" />
+    <Compile Include="..\..\Keyboard.cs" />
+    <Compile Include="..\..\Molecula\*.cs" />
     <Compile Include="..\..\StereoApp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -142,7 +144,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.9" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.14" />
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
