--- a/Platforms/Android/AndroidManifest.xml
+++ b/Platforms/Android/AndroidManifest.xml
@@ -43,12 +43,7 @@
 
 	<!-- Oculus specific items -->
 	<uses-permission android:name="com.oculus.permission.HAND_TRACKING"/>
-	<uses-permission android:name="com.oculus.permission.BODY_TRACKING"/>
-	<uses-permission android:name="com.oculus.permission.FACE_TRACKING"/>
-	<uses-permission android:name="com.oculus.permission.EYE_TRACKING"/>
+	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-feature    android:name="com.oculus.feature.PASSTHROUGH"    android:required="true"/>
-	<uses-feature    android:name="oculus.software.handtracking"      android:required="false"/>
-	<uses-feature    android:name="com.oculus.software.body_tracking" android:required="false"/>
-	<uses-feature    android:name="oculus.software.face_tracking"     android:required="false"/>
-	<uses-feature    android:name="oculus.software.eye_tracking"      android:required="false"/>
+	<uses-feature    android:name="oculus.software.handtracking"      android:required="true"/>
 </manifest>
