--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,16 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        
+    - name: Setup Java JDK
+      uses: actions/setup-java@v4.0.0
+      with:
+        # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
+        java-version: 11
+        # Java distribution. See the list of supported distributions in README file
+        distribution: microsoft
+        # The package type (jdk, jre, jdk+fx, jre+fx)
+        java-package: jdk
 
     - name: Setup Windows 10 SDK Action
       # You may pin to the exact commit or the version.
